# lablink

./: .dockerignore  .gitignore  CLAUDE.md  CNAME  CONTRIBUTING.md  DOCS_TODO.md  DOCUMENTATION_IMPROVEMENT_PLAN.md  Dockerfile  MIGRATION_PLAN.md  README.md  VM_REGISTRATION_FIX_PLAN.md  VM_REGISTRATION_ISSUE.md  VM_REGISTRATION_SOLUTION.md  create-service-account.sh  db_config.py  delete-service-account.sh  index.html  latest  mkdocs.yml  pyproject.toml  versions.json
.claude/commands/: README.md  dev-setup.md  docker-build-allocator.md  docker-build-client.md  docker-test-allocator.md  docker-test-client.md  docs-build.md  docs-serve.md  lint-fix.md  lint.md  pr-description.md  publish-allocator.md  publish-client.md  review-pr.md  run-allocator-local.md  test-allocator.md  test-client.md  test-coverage.md  trigger-ci.md  trigger-docker-build.md  update-changelog.md  validate-terraform.md
.github/: dependabot.yml
.github/workflows/: build-and-test-pip.yml  ci.yml  client-vm-infrastructure-test.yml  docs.yml  lablink-allocator-destroy.yml  lablink-allocator-image-production.yml  lablink-allocator-image-test.yml  lablink-allocator-service-test.yml  lablink-allocator-terraform.yml  lablink-client-base-image-production.yml  lablink-client-base-image-test.yml  lablink-images-production.yml  lablink-images-test.yml  lablink-images.yml  publish-packages.yml  publish-pip.yml
app/: app.py
docs/: adapting.md  admin-panel.md  api-endpoints.md  architecture.md  aws-setup.md  configuration-examples.md  configuration.md  contributing-docs.md  contributing.md  cost-estimation.md  database.md  deployment.md  dns-configuration.md  faq.md  index.md  installation.md  prerequisites.md  quickstart-template.md  quickstart.md  security.md  ssh-access.md  testing.md  troubleshooting.md  workflows.md  workshop-guide.md
docs/cli/: first-deployment.md  index.md  installation.md  login.md  managing-deployments.md
docs/reference/: cli.md
docs/scripts/: gen_changelog.py  gen_ref_pages.py
docs/stylesheets/: extra.css
lablink-allocator/: Dockerfile  Dockerfile.dev  README.md  backend-prod.hcl  backend-test.hcl  backend.tf  backend_config.tf  generate-init-sql.py  init.sql  main.tf  requirements.txt  setup.py  start.sh  terraform.tfvars  user_data.sh
lablink-allocator-service_v0.0.2a0/: index.html  objects.inv
lablink-allocator-service_v0.0.2a0/configuration/: index.html
lablink-allocator-service_v0.0.2a0/contributing-docs/: index.html
lablink-allocator-service_v0.0.2a0/cost-estimation/: index.html
lablink-allocator-service_v0.0.2a0/search/: search_index.json
lablink-allocator-service_v0.0.3a0/: 404.html  index.html  objects.inv
lablink-allocator-service_v0.0.3a0/adapting/: index.html
lablink-allocator-service_v0.0.3a0/architecture/: index.html
lablink-allocator-service_v0.0.3a0/changelog-allocator/: index.html
lablink-allocator-service_v0.0.3a1/: 404.html  index.html
lablink-allocator-service_v0.1.0/: 404.html  objects.inv
lablink-allocator-service_v0.1.1/: index.html
lablink-allocator-service_v0.1.2/: index.html  objects.inv
lablink-allocator/lablink-allocator-service/: README.md  database.py  generate-init-sql.py  get_cofig.py  get_config.py  index.html  lambda_function.py  main.py  pg_hba.conf  pyproject.toml  requirements-dev.txt  requirements.txt
lablink-allocator/lablink-allocator-service/conf/: config.yaml  structured_config.py
lablink-allocator/lablink-allocator-service/src/lablink_allocator_service/: __main__.py  database.py  generate-init-sql.py  get_config.py  main.py
lablink-allocator/lablink-allocator-service/src/lablink_allocator_service/conf/: config.yaml  structured_config.py
lablink-allocator/lablink-allocator-service/src/lablink_allocator_service/templates/: delete-dashboard.html  index.html  instance-logs.html  success.html
lablink-allocator/lablink-allocator-service/src/lablink_allocator_service/utils/: aws_utils.py
lablink-allocator/lablink-allocator-service/templates/: admin.html  create-instances.html  dashboard.html  delete-instances.html  index.html  instance-logs.html  instances.html  success.html
lablink-allocator/lablink-allocator-service/terraform/: backend-client-dev.hcl  backend-client-prod.hcl  backend-client-test.hcl  conftest.py  lambda_function.py  main.tf  outputs.tf  user_data.sh  variables.tf
lablink-allocator/lablink-allocator-service/terraform/fixtures/: plan.auto.tfvars
lablink-allocator/lablink-allocator-service/terraform/tests/: requirements.txt  test_apply.py  test_plan.py
lablink-allocator/lablink-allocator-service/tests/: conftest.py  test_admin_auth.py  test_api_calls.py  test_dns_config.py  test_home.py  test_pages.py  test_terraform_api.py
lablink-allocator/lablink-allocator-service/tests/utils/: test_aws_utils.py  test_scp.py  test_terraform_utils.py
lablink-allocator/lablink-allocator-service/utils/: analytics_utils.py  available_instances.py  aws_utils.py  scp.py  terraform_utils.py
lablink-client-base/lablink-client-service/: README.md  database.py  pyproject.toml  subscribe.py
lablink-client-base/lablink-client-service/lablink_client_service/: check_gpu.py  check_health.py  connect_crd.py  database.py  logger_config.py  logger_utils.py  pyproject.toml  subscribe.py  update_inuse_status.py
lablink-client-base/lablink-client-service/lablink_client_service/conf/: config.yaml  structured_config.py
lablink-client-base/lablink-client-service/src/lablink_client_service/: update_inuse_status.py
lablink-client-base/lablink-client-service/tests/: test_check_gpu.py  test_connect_crd.py  test_database.py  test_imports.py  test_subscribe.py  test_update_inuse.py
lablink-client-service_v0.0.7a0/: 404.html
lablink-client-service_v0.1.1/: 404.html
lablink-infrastructure/: .gitignore  README-VERIFY.md  README.md  main.tf  terraform.tfvars  user_data.sh
openspec/: project.md
prod/: 404.html  index.html  objects.inv
terraform/: .terraform.lock.hcl  README.md  main.tf  output.tf  providers.tf  start_up.sh  variables.tf
tests/: lablink-client-service-test.py  lablink_client_service_test.py
(+294 files in other folders)
