[project]
authors = [
  {name = "Amitha Attapu", email = "amithaattapu0509@gmail.com"},
  {name = "Andrew Park", email = "hep003@ucsd.edu"},
]
dependencies = [
  "flask>=2.2",
  "werkzeug>=2.2",
  "flask_sqlalchemy>=2.5",
  "sqlalchemy>=1.3",
  "psycopg2-binary>=2.9",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "requests>=2.28",
  "Flask-HTTPAuth>=4.7",
  "boto3>=1.26",
]
description = "VM Allocator Service Package for Lablink"
name = "lablink-allocator-service"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"

[project.optional-dependencies]
dev = ["twine", "build", "pytest", "black"]
