[project]
authors = [
  {name = "Amitha Attapu", email = "amithaattapu0509@gmail.com"},
  {name = "Andrew Park", email = "hep003@ucsd.edu"},
]
dependencies = [
  "flask>=2.2",
  "werkzeug>=2.2",
  "flask_sqlalchemy>=2.5",
  "sqlalchemy>=1.3",
  "psycopg2-binary>=2.9",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "requests>=2.28",
  "Flask-HTTPAuth>=4.7",
  "boto3>=1.26",
]
description = "VM Allocator Service Package for Lablink"
name = "lablink-allocator-service"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"

[project.optional-dependencies]
dev = ["twine", "build", "pytest", "ruff", "pytest-cov"]

[tool.ruff.lint]
ignore = [
  "E721", # Use isinstance() for type comparisons
  "E731", # Do not assign a lambda expression
  "E741", # Ambiguous variable name
  "F405", # May be undefined, or defined from star imports
]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"tests/*" = ["F403", "F405"]
