[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [
  {name = "Amitha Attapu", email = "amithaattapu0509@gmail.com"},
  {name = "Andrew Park", email = "hep003@ucsd.edu"},
]
dependencies = [
  "psycopg2-binary>=2.9",
  "requests>=2.31.0,<3.0.0",
  "urllib3>=1.26,<2.0",
  "certifi>=2023.7.22,<2025.0.0",
  "charset-normalizer>=3.1,<4.0",
  "idna>=3.4,<4.0",
  "packaging>=23.1,<24.0",
  "sphinx>=6.1.3,<7.0",
  "sphinx-better-theme>=0.1.5,<0.2.0",
  "sphinxcontrib-applehelp>=1.0.4,<2.0",
  "sphinxcontrib-devhelp>=1.0.2,<2.0",
  "sphinxcontrib-htmlhelp>=2.0.1,<3.0",
  "sphinxcontrib-jsmath>=1.0.1,<2.0",
  "sphinxcontrib-qthelp>=1.0.3,<2.0",
  "sphinxcontrib-serializinghtml>=1.1.5,<2.0",
  "snowballstemmer>=2.2.0,<3.0",
  "pygments>=2.15.0,<3.0",
  "jinja2>=3.1.2,<4.0",
  "markupsafe>=2.1.2,<3.0",
  "imagesize>=1.4.1,<2.0",
  "babel>=2.12.1,<3.0",
  "docutils>=0.19,<0.22",
  "alabaster>=0.7.13,<0.8",
  "hydra-core>=1.3,<2.0",
  "omegaconf>=2.3,<3.0",
]
description = "Lablink Client Service that will be installed in the lablink-client-base-image"
keywords = ["vm", "docker", "postgres", "tutorial"]
name = "lablink-client-service"
readme = "README.md"
version = "0.0.1"

[project.optional-dependencies]
dev = ["toml", "twine", "build", "pytest", "black", "python-dotenv"]

[project.urls]
Homepage = "https://github.com/talmolab/lablink"
Issues = "https://github.com/talmolab/lablink/issues"

[tool.setuptools.packages.find]
include = ["lablink_client_service*"]
where = ["."]

[project.scripts]
subscribe = "lablink_client_service.subscribe:main"
