[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [
  {name = "Amitha Attapu", email = "amithaattapu0509@gmail.com"},
  {name = "Andrew Park", email = "hep003@ucsd.edu"},
]
dependencies = [
  "psycopg2-binary>=2.9",
  "requests>=2.31.0",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "psutil",
]
description = "Lablink Client Service that will be installed in the lablink-client-base-image"
keywords = ["vm", "docker", "postgres", "tutorial"]
name = "lablink-client-service"
readme = "README.md"
version = "0.0.4"

[project.optional-dependencies]
dev = ["toml", "twine", "build", "pytest", "black", "python-dotenv"]

[project.urls]
Homepage = "https://github.com/talmolab/lablink"
Issues = "https://github.com/talmolab/lablink/issues"

[tool.setuptools.packages.find]
include = ["lablink_client_service*"]
where = ["."]

[project.scripts]
check_gpu = "lablink_client_service.check_gpu:main"
subscribe = "lablink_client_service.subscribe:main"
update_inuse_status = "lablink_client_service.update_inuse_status:main"
